# windows_ocr

./: LICENSE  README.md  pubspec.yaml
.github/workflows/: main.yml
doc/api/: __404error.html  index.html  index.json
doc/api/Barcode/: Barcode-class.html  Barcode-library.html
doc/api/Barcode/Barcode/: Barcode.fromData.html  Barcode.fromJson.html  Barcode.html  toJson.html  type.html  value.html
doc/api/Languages/: Languages-class.html  Languages-library.html
doc/api/Languages/Languages/: Arabic.html  Catalan.html  Danish.html  Dutch.html  English.html  Finnish.html  French.html  German.html  Hungarian.html  Indonesian.html  (+10 more)
doc/api/Mrz/: Mrz-class.html  Mrz-library.html
doc/api/windows_ocr/: WindowsOcr-class.html  windows_ocr-library.html
example/: README.md  out.xml췍﷽﷽  pubspec.yaml
example/integration_test/: app_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: Barcode.dart  Languages.dart  Mrz.dart  windows_ocr.dart
test/: windows_ocr_test.dart
windows/: CMakeLists.txt  ErrorCodes.h  Forcelib.h  Functions.h  NSOCR.cpp  NSOCR.h  windows_ocr_plugin.cpp
windows/Bin_common/: BG.lng  CA.lng  CS.lng  DA.lng  DE.lng  EN.lng  ES.lng  ET.lng  FN.lng  FR.lng  HR.lng  HU.lng  ID.lng  IT.lng  LT.lng  LV.lng  NB.lng  NL.lng  PL.lng  PT.lng  RO.lng  RU.lng  SK.lng  SL.lng  SV.lng  TR.lng  UserDictionary.txt
windows/include/windows_ocr/: windows_ocr_plugin.h
(+30 files in other folders)
